# artificial-life

./: Cargo.toml
gene-derive/: Cargo.toml
gene-derive/src/: lib.rs
gene-traits/: Cargo.toml
gene-traits/src/: lib.rs
src/: component_register.rs  config.rs  main.rs  main.rs.first
src/components/: accumulator.rs  activation.rs  amino_acid_reader.rs  expr_gene.rs  gene_reader.rs  mod.rs  neuron.rs  neurotransmitters.rs  receptor.rs
src/genetics/: mod.rs
src/systems/: mod.rs  neuron_updates.rs  neurotransmitter_updates.rs  ribosome.rs
