[package]
name = "gene_derive"
version = "0.1.0"
edition = "2024"

[dependencies]
darling = "0.20.11"
hashed-type-def = { version = "0.1.2", features = ["derive"] }
inventory = "0.3.20"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.102"
gene_traits = { path = "../gene-traits/" }
rand = "0.9.1"

[lib]
proc-macro = true
